[tool.poetry]
name = "aoc2024"
version = "0.1.0"
description = ""
authors = ["Nichlas"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.10"
advent-of-code-data = "^1.3.0"
scikit-learn = "^1.1.3"
networkx = "^2.8.8"
browser-cookie3 = "^0.16.2"
z3-solver = "^4.11.2.0"
numpy = "^2.1.3"
more-itertools = "^10.5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
